--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
     <head>
         <meta charset="utf=8">
-        <meta name="decription" content="This is about my page.">
+        <meta name="decription" content="This is about me.">
         <meta name="keywords" content="web, page, template">
 
         <title>Azar's Website</title>
@@ -66,7 +66,7 @@
             in 9th grade this year. He likes to hang out with his friend, they both play games, watch
             shows, and play outside. My mom works from home as a cancer resgister and makes sure that we
             have what we need when we don't have a lot of money for things that we want. She also tries to
-            make sure that we are able to have fun and we have responsibilities that we have to deal with.
+            make sure that we are able to have fun.
             <br><br>
             Wrigley is our Golden Retriever and he will be 7 this year, he doesn't like to be alone and if
             you leave him alone or he thinks that he is alone, he will start whimpering he also won't eat
