--- a/Page2.html
+++ b/Page2.html
@@ -15,7 +15,7 @@
         <div id = "container">
             
         <header>
-            <h1>Games</h1>
+            <h1>Azar's Website</h1>
             <h4>About Azar's Favorite Games</h4>
         </header>
         
@@ -54,7 +54,7 @@
             walls, delete walls, and terrain the land.
             <br><br>
             A Dance of Fire and Ice is a rythem game that starts out pretty easy but quickly gets more
-            difficult , a few features that the game has are setting the offset of the devices sound by
+            difficult, a few features that the game has are setting the offset of the devices sound by
             tapping to the beat that is played. The first few levels are getting the player used to how
             the game works, and teaching the first few simple things that they can do. There are different
             devices to play it on such as phones, or coumputers. To pick a level when playing on a laptop
@@ -62,9 +62,7 @@
             player just swipes to the world and level that they want to play. There are also levels that
             other players have made, a lot of them are difficult if the player is still new to the game.
             <br><br>
-            The Five Nights at Freddys, FNaF, game and book series has been around since 2014, and has grown to
-            have 10 games, 3 book series and soon a movie. The first FNaF game came out in August of 2014,
-            made by Scott Cawthon and FNaF1 is how everything in the FNaF series came to be.
+            They both are really fun games to play with a bit of free time after doing a few things.
         </section>
 
         <footer>
