--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
         <div id = "container">
             
         <header>
-            <h1>Movies</h1>
+            <h1>Azar's Website</h1>
             <h4>About Azar's Favorite Movies</h4>
         </header>
         
@@ -41,14 +41,14 @@
 
         <section>
             Coraline is about a girl who moves into a new house, she finds a little door that leads nowhere
-            after he mom unlocks it. When Coraline's parents go to bed she tries the door again and notices
+            after her mom unlocks it. When Coraline's parents go to bed she tries the door again and notices
             that the door now opens to a tunnel that she can crawl through. Once Coraline gets to the other
             side she relizes that it looks a lot like her new house, and she meets the other mother. The 
             other mother starts of being really nice and getting Coraline what she asks for, but eventually
             when she asks Coraline to stay by asking if she can sew buttons over Coralines eyes. After 
             Coraline tells the other mother no, the other mother gets angry and starts going after Coraline.
             The other mother pushes Coraline into an old room, Coraline talks to other crildren that the other
-            mother has captured. The kids help Coraline escape the other mother, when Coraline gets out and
+            mother has captured. The ghost kids help Coraline escape the other mother, when Coraline gets out and
             the kids thank her for helping them before leaving. Coraline and Wybie throw the key to the door
             down a well, and then play over by it.
             <br><br>
@@ -63,7 +63,7 @@
             the well she gave it to the other mother, but the other mother might try and use the key to go
             into the first world and trap more kids. There are people that think taht with the way Coraline 
             ended there might end up being a second movie where Coraline is grown and she goes back there with
-            a kid. The other mother would try and go for her kid but then COraline would fight the other mother 
+            a kid. The other mother would try and go for her kid but then Coraline would fight the other mother 
             again.
         </section>
 
