--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
         <div id = "container">
             
         <header>
-            <h1>Books</h1>
+            <h1>Azar's Website</h1>
             <h4>About Azar's Favorite Books</h4>
         </header>
         
@@ -36,33 +36,33 @@
                 <li>Winter Wolf</li>
                 <li>They Both Die at The End</li>
                 <li>The Spiderwick Cronicles</li>
+                <li>The Woods are Always Watching</li>
             </ul>
         </aside>
 
         <section>
-            Slenderman is a mystery book about this collage student and his missing friend. His friend goes
-            missing and he starts having nightmares about where she could be so he makes a about it on
-            reddit. Some of the comments on reddit tell him that slenderman is coming for him and if he
-            tries to find his friend, and that he shouldn't look for her. If he looks for her and manages
-            to bring her back, he won't be able to come back. While other comments are excited about the
-            story will turn out. He decides to look for her anyways, and ends up with a friend to help share
-            his story if he doesn't come  back. He saves his friend but he doesn't come back with her and
-            everyone is confused as to where = his friend was. His friend doesn't even know where she was,
-            and the friend he made over email decides to share the last recording of him onto reddit. Some
-            of comments on the post are saying that they warned him, while others are upset at how the story
-            ended. His classmates don't relize he is missing until his friend tries to text him to tell him
-            that their friend is back.
+            Slenderman is a mystery book about a college student. His friend goes missing and he starts
+            having nightmares about where she could be so he makes a about it on reddit. Some of the
+            comments on reddit tell him that slenderman is coming for him and if he tries to find his 
+            friend, and that he shouldn't look for her. If he looks for her and manages to bring her back, he
+            won't be able to come back. While other comments are excited about the story will turn out. He 
+            decides to look for her anyways, and ends up with a friend to help share his story if he doesn't 
+            come  back. He saves his friend but he doesn't come back with her and everyone is confused as to 
+            where his friend was. His friend doesn't even know where she was, and the friend he made over 
+            email decides to share the last recording of him onto reddit. Some of comments on the post are
+            saying that they warned him, while others are upset at how the story ended. His classmates don't
+            relize he is missing until his friend tries to text him to tell him that their friend is back.
             <br><br>
             They Both Die at The End is a sad book about two boys, Mateo and Rufus, getting a call from
-            death-cast, which can predict the day that people will die then calls them to let them know so
+            death-cast, which can predict the day that people will die, then calls them to let them know so
             they can live their last day to the fullest. A couple chapters in the Mateo and Rufus end up
             meeting and they spend their last day together. The two go to a resturant to try new food, a
             place where they can experince different things, after doing the experince together they go to
-            the park and talk for a little bit.Mateo and Rufus talk about how Rufuss' family got the call on 
+            the park and talk for a little bit. Mateo and Rufus talk about how Rufuss' family got the call on 
             the same day exept for him, and they all past away in a car crash. Eventually they end up at
             Mateos apartment and thats where they hang out for the rest of the day, Mateo woke up from his
-            nap and went to cook a snack for Rufus forgetting that stove is broken and it catches on fire.
-            Near the end Rufus writes Mateos dad a letter letting him know that when he wakes up his son got
+            nap and went to cook a snack for Rufus forgetting that his stove is broken and it catches on fire.
+            Near the end Rufus writes Mateos' dad a letter letting him know that when he wakes up his son got
             out of the house and did a lot of different things that he would not normally have done without
             Rufus to push that little bit to get him out of his shell.
         </section>
