--- a/Page2.html
+++ b/Page2.html
@@ -36,33 +36,34 @@
                 <li>The Sims 4</li>
                 <li>FNaF: Security Breach</li>
                 <li>A Dance of Fire and Ice</li>
+                <li>Unpacking</li>
+                <li>A Little to The Left</li>
             </ul>
         </aside>
 
         <section>
             In the Sims 4 the player gets to create and design a person and house as well as buy packs that
-            add items to the game. When in the Create-A-Sim menu, or the CAS menu, the player gets to pick
-            how their Sim will look, and have up to 8 Sims in one household. There are a lot of different
-            combinations that people come up with for their Sim with and without Custom Content, or CC, once
-            the player is finished designing their Sim they get to pick a name, favorite things and how the
-            Sim will act. After finishing in the CAS menu the player gets to pick where their Sim lives,
-            and to start out they get 20,000 Simoleons to pick a lot. Once the player buys the lot that they
-            picked, they can have their Sim get a job, make some friends, or just mess around. There is also
-            a buy/build mode where the player can buy and build things that can help with whatever they are
-            doing with their Sims. The player can buy a lot of different things such as kitchen appliances,
-            bedroom items, things for living rooms, and decerations. In build mode the player can build
-            walls, delete walls, and terrain the land.
+            add items to the game. When in the Create-A-Sim menu, the player gets to pick how their Sim will
+            look, and can have up to 8 Sims in one household. There are a lot of different combinations that
+            people come up with for their Sim with and without Custom Content, once the player is finished
+            designing their Sim they get to pick a name, favorite things and how the Sim will act. After
+            finishing in the CAS menu the player gets to pick where their Sim lives, and to start out they
+            get 20,000 Simoleons to pick a lot. Once the player buys the lot that they picked, they can have
+            their Sim get a job, make some friends, or just mess around. There is also a buy/build mode
+            where the player can buy and build things that can help with whatever they are doing with their
+            Sims. The player can buy a lot of different things such as kitchen appliances, bedroom items,
+            things for living rooms, and decerations. In build mode the player can build walls, delete walls,
+            and terrain the land.
             <br><br>
-            A Dance of Fire and Ice is a rythem game that starts out pretty easy but quickly gets more
-            difficult, a few features that the game has are setting the offset of the devices sound by
-            tapping to the beat that is played. The first few levels are getting the player used to how
-            the game works, and teaching the first few simple things that they can do. There are different
-            devices to play it on such as phones, or coumputers. To pick a level when playing on a laptop
-            the player has to get the balls overto the level they want to play, when playing on a phone the
-            player just swipes to the world and level that they want to play. There are also levels that
-            other players have made, a lot of them are difficult if the player is still new to the game.
-            <br><br>
-            They both are really fun games to play with a bit of free time after doing a few things.
+            A Dance of Fire and Ice is a rythem game that starts out pretty easy but gets more difficult, a
+            few features that the game has are setting the offset of the devices sound when having trouble
+            with the levels by tapping to the beat that is played. The first few levels are getting the
+            player used to how the game works, and teaching the first few simple things that they can do.
+            There are different devices to play it on such as phones, or coumputers. To pick a level when
+            playing on a laptop the player has to get the balls over to the level they want to play, when
+            playing on a phone the player just swipes to the world and level that they want to play. There
+            are also levels that other players have made, a lot of them are difficult if the player is still
+            new to the game.
         </section>
 
         <footer>
