--- a/page4.html
+++ b/page4.html
@@ -36,6 +36,8 @@
                 <li>Coraline</li>
                 <li>The Nightmare Before Cristmas</li>
                 <li>Spiderman: Into The Spiderverse</li>
+                <li>Pet Cemetary</li>
+                <li>It</li>
             </ul>
         </aside>
 
@@ -48,9 +50,9 @@
             when she asks Coraline to stay by asking if she can sew buttons over Coralines eyes. After 
             Coraline tells the other mother no, the other mother gets angry and starts going after Coraline.
             The other mother pushes Coraline into an old room, Coraline talks to other crildren that the other
-            mother has captured. The ghost kids help Coraline escape the other mother, when Coraline gets out and
-            the kids thank her for helping them before leaving. Coraline and Wybie throw the key to the door
-            down a well, and then play over by it.
+            mother has captured. The ghost kids help Coraline escape the other mother, when Coraline gets out
+            and the kids thank her for helping them before leaving. Coraline and Wybie throw the key to the
+            door down a well, and then play over by it.
             <br><br>
             There are some theroies about Coraline though, such as Coraline never left the other world and 
             Coraline throwing the key into the well gave it to the other mother, but that is a few of the
