--- a/Index.html
+++ b/Index.html
@@ -37,6 +37,9 @@
                 <li>Five Nights at Freddy's</li>
                 <li>Black Widow</li>
                 <li>Coraline</li>
+                <li>Winter Wolf</li>
+                <li>Slenderman</li>
+                <li>The Woods are Always Watching</li>
             </ul>
             <br>
             <h4>Family</h4>
@@ -45,35 +48,35 @@
                 <li>Remigntion - Little Brother</li>
                 <li>Wrigley - Golden Retriever</li>
                 <li>Raine - Older Cat</li>
-                <li>Wynstyn - Kitten</li>
+                <li>Wynstyn Chili - Kitten</li>
             </ul>
         </aside>
 
         <section>
             I enjoy a lot of different things such as reading, playing games, watching movies, and writing.
-            My favorite type of books to read are fantasy, murder, and horror. My favorite games are Minecraft, 
+            My favorite type of books to read are mystery, murder, and horror. My favorite games are Minecraft, 
             The Sims 4, and Five Nights at Freddy's: Security Breach. Minecraft and The Sims 4 are sandbox
             and creative games while Five Nights at Freddy's: Security Breach is a horror survival game about
             animatronics trying to get you. My favorite movies are Black Widow, Coraline, and the FNaF movie.
             The Black Widow movie is about how Black Widow became an avenger. Coraline and the FNaF movie are
             horror movies about how things aren't always how they seem. I am currently writing a few short 
-            stories about different writing promts, neither of the stories have a title. One of the stories
+            stories about different writing promts, none of the stories have a title. One of the stories
             is about Satan taking over Earth and he spots a person, Satan is confused because the person
             is neither god, angel, demon, nor human but something more powerful.
             <br><br>
             My family includes my mom, little brother and our pets. We have a golden retriver named Wrigley,
-            a cat named Raine, and a kitten named Wynstyn.Remington is 2 years younger than me, and he is
+            a cat named Raine, and a kitten named Wynstyn. Remington is 2 years younger than me, and he is
             in 9th grade this year. He likes to hang out with his friend, they both play games, watch
-            shows, and play outside. My mom works from home as a cancer resgister and makes sure that we
-            have what we need when we don't have a lot of money for things that we want. She also tries to
-            make sure that we are able to have fun.
+            shows, and play outside. My mom works from home and makes sure that we have what we need when we
+            don't have a lot of money for things that we want. She also tries to make sure that we are able
+            to have fun.
             <br><br>
             Wrigley is our Golden Retriever and he will be 7 this year, he doesn't like to be alone and if
-            you leave him alone or he thinks that he is alone, he will start whimpering he also won't eat
+            he is left alone or he thinks that he is alone, he will start whimpering he also won't eat
             his food. Wynstyn Chili was found behind the Wendy's in Wauseon, he was a the Humane Shelter
-            with is brothers and sisters, he is super cute and meows a lot with a lot of other noises.
+            with is brothers and sisters, he is super cute and meows a lot and makes a lot of other cat noises.
             Raine was found in a shed as a kitten when we got her and she bats her paws at Wrigley and
-            Wynstyn with her paw.
+            Wynstyn.
         </section>
 
         <footer>
