--- a/Index.html
+++ b/Index.html
@@ -55,8 +55,8 @@
         <section>
             I enjoy a lot of different things such as reading, playing games, watching movies, and writing.
             My favorite type of books to read are mystery, murder, and horror. My favorite games are Minecraft, 
-            The Sims 4, and Five Nights at Freddy's: Security Breach. Minecraft and The Sims 4 are sandbox
-            and creative games while Five Nights at Freddy's: Security Breach is a horror survival game about
+            The Sims 4, and Five Nights at Freddy's: Ultimate Custom Night. Minecraft and The Sims 4 are sandbox
+            and creative games while Five Nights at Freddy's: Ultimate Custom Night is a horror survival game about
             animatronics trying to get you. My favorite movies are Black Widow, Coraline, and the FNaF movie.
             The Black Widow movie is about how Black Widow became an avenger. Coraline and the FNaF movie are
             horror movies about how things aren't always how they seem. I am currently writing a few short 
@@ -72,7 +72,7 @@
             to have fun.
             <br><br>
             Wrigley is our Golden Retriever and he will be 7 this year, he doesn't like to be alone and if
-            he is left alone or he thinks that he is alone, he will start whimpering he also won't eat
+            he is left alone or he thinks that he is alone, he will start whining he also won't eat
             his food. Wynstyn Chili was found behind the Wendy's in Wauseon, he was a the Humane Shelter
             with is brothers and sisters, he is super cute and meows a lot and makes a lot of other cat noises.
             Raine was found in a shed as a kitten when we got her and she bats her paws at Wrigley and
@@ -82,9 +82,6 @@
         <footer>
             <h6>Copyright &copy; 2023 Azar Heiney</h6>
         </footer>
-
         </div>
-
     </body>
-
 </html>
