--- a/page3.html
+++ b/page3.html
@@ -58,21 +58,18 @@
             they can live their last day to the fullest. A couple chapters in Mateo and Rufus end up meeting
             and they spend their last day together. The two go to a resturant to try new food, a place where
             they can experince different things, after doing the experince together they go to the park and
-            talk for a little bit. Mateo and Rufus talk about how Rufuss' family got the call on the same day
-            exept for him, and they all past away in a car crash. Eventually they end up at Mateos apartment
-            and thats where they hang out for the rest of the day, Mateo woke up from his nap and went to
-            cook a snack for Rufus forgetting that his stove is broken and it catches on fire. Near the end
-            Rufus writes Mateos' dad a letter letting him know that when he wakes up his son got out of the
-            house and did a lot of different things that he would not normally have done without Rufus to
-            push that little bit to get him out of his shell.
+            talk for a little bit. Mateo and Rufus talk about how Rufuss' family all got the call on the same
+            day exept for him, and they all past away in a car crash. Eventually they end up at Mateos
+            apartment and thats where they hang out for the rest of the day, Mateo woke up from his nap and
+            went to cook a snack for Rufus forgetting that his stove is broken and it catches on fire. Near
+            the end Rufus writes Mateos' dad a letter letting him know that when he wakes up his son got out
+            of the house and did a lot of different things that he would not normally have done without Rufus
+            to push that little bit to get him out of his shell.
         </section>
 
         <footer>
             <h6>Copyright &copy; 2023 Azar Heiney</h6>
         </footer>
-
         </div>
-
     </body>
-
 </html>
