--- a/page4.html
+++ b/page4.html
@@ -37,7 +37,7 @@
                 <li>The Nightmare Before Cristmas</li>
                 <li>Spiderman: Into The Spiderverse</li>
                 <li>Pet Cemetary</li>
-                <li>It</li>
+                <li>Five Night's at Freddys</li>
             </ul>
         </aside>
 
@@ -47,34 +47,32 @@
             that the door now opens to a tunnel that she can crawl through. Once Coraline gets to the other
             side she relizes that it looks a lot like her new house, and she meets the other mother. The 
             other mother starts of being really nice and getting Coraline what she asks for, but eventually
-            when she asks Coraline to stay by asking if she can sew buttons over Coralines eyes. After 
-            Coraline tells the other mother no, the other mother gets angry and starts going after Coraline.
-            The other mother pushes Coraline into an old room, Coraline talks to other crildren that the other
-            mother has captured. The ghost kids help Coraline escape the other mother, when Coraline gets out
-            and the kids thank her for helping them before leaving. Coraline and Wybie throw the key to the
-            door down a well, and then play over by it.
+            when she asks Coraline to stay by asking if she can sew buttons over Coralines eyes. Coraline
+            tells the other mother no, the other mother gets angry and starts going after Coraline. The other
+            mother pushes Coraline into an old room so she can keep her, Coraline talks to other cildren
+            that the other mother has captured. The ghost kids help Coraline escape the other mother, when
+            Coraline gets out and the kids thank her for helping them before leaving. Coraline and Wybie
+            throw the key to the door down a well, and then play over by it before Coraline and her parents 
+            move out of that house.
             <br><br>
             There are some theroies about Coraline though, such as Coraline never left the other world and 
             Coraline throwing the key into the well gave it to the other mother, but that is a few of the
             theroies. The reason some people think Coraline never left the other world is because the cat
             can walk past something and dissapear, when he does this he goes back to the first world. At the
             end of the movie the cat walks past the sign and disapears, as Coraline and her parents are
-            driving away from moving out. The other theory is that the well connects the two worlds, this
-            is beacuse the well is so deep that they can't see the bottom. When things fall into the well
-            no one can here them hit the bottom because it's so deep. So by Coraline throwing the key into
-            the well she gave it to the other mother, but the other mother might try and use the key to go
-            into the first world and trap more kids. There are people that think taht with the way Coraline 
+            driving away from moving out. Another theory is that the well connects the two worlds, this
+            is beacuse the well is deep enough that they can't see the bottom. When things fall into the well
+            no one can hear them hit the bottom because it's so deep. So by Coraline throwing the key into
+            the well she gave it to the other mother, and the other mother might try and use the key to go
+            into the first world and trap more kids. There are people that think that with the way Coraline 
             ended there might end up being a second movie where Coraline is grown and she goes back there with
-            a kid. The other mother would try and go for her kid but then Coraline would fight the other mother 
-            again.
+            her kid. The other mother would try and go for her kid but then Coraline would fight the other
+            mother again.
         </section>
 
         <footer>
             <h6>Copyright &copy; 2023 Azar Heiney</h6>
         </footer>
-
         </div>
-
     </body>
-
 </html>
