--- a/page5.html
+++ b/page5.html
@@ -47,27 +47,27 @@
             <ul>
                 <li>Fazbear Frights - 12 books</li>
                 <li>Tales in The Pizzaplex - 10 Books</li>
-                <li>The trilogy - 3 Books with the Twisted Animatronics</li>
+                <li>The trilogy - 3 Books</li>
                 <li>FNaF Ultimate Guide</li>
                 <li>FNaF: Sercurity Logbook</li>
             </ul>
         </aside>
 
         <section>
-            The Five Nights at Freddys, FNaF, game and book series has been around since 2014, and has grown to
-            have 10 games, 3 book series and a movie. The first FNaF game came out in August of 2014,
-            made by Scott Cawthon and FNaF1 is how everything in the FNaF series came to be.
+            The Five Nights at Freddys, FNaF, game and book series has been around since 2014, and has grown
+            to have 10 games, 3 book series and a movie. The first FNaF game came out in August of 2014, made
+            by Scott Cawthon and FNaF1 is how everything in the FNaF series came to be.
         <br><br>
             The first game has the original animatronics in the Fazbear franchise, and the games have secrets
             in them. If the player looks to the camera 2b there is a chance that the poster will change from
             Freddy to a yellow bear named Golden Freddy, as well as looking at Pirates Cove the sign might say
-            "IT'S ME" instead of 'Out of Order'. The second game, FNaF2, has 10 animatronics with aflashlight
-            since the office doesn't have doors to keep the animatronics out, the flashlight that helps keep
-            the animatronics away from the front part of the office. There are vents on each side that some
-            animatronics will go through, if Balloon Boy makes it into the office he makes it so that the
-            flashlight stops working for a little bit. On one of the cameras there is a music box that needs
-            to be wound up, if the player lets it get low enough the animatronic in the box will make its way
-            to the office, there is no way to stop it when the music box runs out.
+            "IT'S ME" instead of 'Out of Order'. The second game, FNaF2, has 10 animatronics since the office
+            doesn't have doors to keep the animatronics out, the flashlight that helps keep the animatronics
+            away from the front part of the office. There are vents on each side that some animatronics will
+            go through, if Balloon Boy makes it into the office he makes it so that the flashlight stops
+            working for a little bit. On one of the cameras there is a music box that needs to be wound up,
+            if the player lets the music box run out then the animatronic in the box will make its way to
+            the office, there is no way to stop it when the music box runs out.
         <br><br>    
             There are a bunch of different theories on everything in the FNaF series, a youtuber that made
             theories on FNaF is MatPat, he has made over 80 videos on FNaF theories alone. He also makes 
@@ -76,16 +76,13 @@
             Secrity breach, these youtubers have found bugs, glitches, and other ways to bend the game to do
             what they want it to do. Astrilspiffs most popular FNaF video is him doing 600%, it took about
             seventeen and half hours to complete without breaks. Beakseat Gaming and Astrilspiff have both 
-            done a lot with the game, they have both beat the game backwards, without using Freddy, and
-            without picking up any items.
+            done a lot with the game, they have both beat the game backwards, without using Freddy, without
+            jumping, only walking forward and without picking up any items.
         </section>
 
         <footer>
             <h6>Copyright &copy; 2023 Azar Heiney</h6>
         </footer>
-
         </div>
-
     </body>
-
 </html>
