Finished Two Coloumn website

--- a/Index.html
+++ b/Index.html
@@ -56,11 +56,11 @@
             I enjoy a lot of different things such as reading, playing games, watching movies, and writing.
             My favorite type of books to read are mystery, murder, and horror. My favorite games are Minecraft, 
             The Sims 4, and Five Nights at Freddy's: Ultimate Custom Night. Minecraft and The Sims 4 are sandbox
-            and creative games while Five Nights at Freddy's: Ultimate Custom Night is a horror survival game about
-            animatronics trying to get you. My favorite movies are Black Widow, Coraline, and the FNaF movie.
-            The Black Widow movie is about how Black Widow became an avenger. Coraline and the FNaF movie are
-            horror movies about how things aren't always how they seem. I am currently writing a few short 
-            stories about different writing promts, none of the stories have a title. One of the stories
+            and creative games while Five Nights at Freddy's: Ultimate Custom Night is a horror survival game
+            about animatronics trying to get you. My favorite movies are Black Widow, Coraline, and the FNaF
+            movie. The Black Widow movie is about how Black Widow became an avenger. Coraline and the FNaF
+            movie are horror movies about how things aren't always how they seem. I am currently writing a few
+            short stories about different writing promts, none of the stories have a title. One of the stories
             is about Satan taking over Earth and he spots a person, Satan is confused because the person
             is neither god, angel, demon, nor human but something more powerful.
             <br><br>
