--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
         
         <nav>
             <ul>
-                <li><a href="Index.html" title="Home">Home</a></li>
+                <li><a href="index.html" title="Home">Home</a></li>
                 <li><a href="page2.html" title="Games">Games</a></li>
                 <li><a href="page3.html" title="Books">Books</a></li>
                 <li><a href="page4.html" title="Movies">Movies</a></li>
