--- a/Page2.html
+++ b/Page2.html
@@ -64,6 +64,17 @@
             playing on a phone the player just swipes to the world and level that they want to play. There
             are also levels that other players have made, a lot of them are difficult if the player is still
             new to the game.
+            <br><br>
+            Minecraft is a sandbox game with Survival, Hardcore and Creative where you can do almost
+            anything. When creating the world the four different difficulties are peaceful, easy, normal,
+            and hard, there is also a choice to mess with more world settings such as adding a bonus chest
+            or making the world a superflat world. In Survival the player can die multiple times, turn on
+            cheats and change gamemode, the player has to eat to keep health and hunger up, but there are
+            potions that help with healing. In Hardcore the player only gets one life, once the player dies
+            they can either spectate or delete the world. Hardcore is the hardest difficulty in the game,
+            the mobs are stronger, the player takes more damage from other things, and hunger depletes faster.
+            In Creative mode the player doesn't have to worry about any of these things, they also have acess
+            to all the blocks in the game, but some can only be givni to the player through commands.
         </section>
 
         <footer>
