--- a/page5.html
+++ b/page5.html
@@ -68,6 +68,13 @@
             working for a little bit. On one of the cameras there is a music box that needs to be wound up,
             if the player lets the music box run out then the animatronic in the box will make its way to
             the office, there is no way to stop it when the music box runs out.
+            <br><br>
+            The FNaF communtiy has decided that William in the movie can't do basic math, as he tells both Mike
+            and Vessnessa the they had one lob but they had two jobs. The scariest part was the end credit 
+            scene where Balloon Boy appears in the taxi. Everyone that watches or knows of MatPat were suprised
+            to see him in the movie. The part where Bonnie tries to get Freddy to see Mike when sneaking in 
+            really funny because when freddy looks over he looks back at Bonnie, and doesn't seem very interested
+            in the fact that there is nothing there.
         <br><br>    
             There are a bunch of different theories on everything in the FNaF series, a youtuber that made
             theories on FNaF is MatPat, he has made over 80 videos on FNaF theories alone. He also makes 
