--- a/index.html
+++ b/index.html
@@ -53,30 +53,73 @@
         </aside>
 
         <section>
-            I enjoy a lot of different things such as reading, playing games, watching movies, and writing.
-            My favorite type of books to read are mystery, murder, and horror. My favorite games are Minecraft, 
-            The Sims 4, and Five Nights at Freddy's: Ultimate Custom Night. Minecraft and The Sims 4 are sandbox
-            and creative games while Five Nights at Freddy's: Ultimate Custom Night is a horror survival game
-            about animatronics trying to get you. My favorite movies are Black Widow, Coraline, and the FNaF
-            movie. The Black Widow movie is about how Black Widow became an avenger. Coraline and the FNaF
-            movie are horror movies about how things aren't always how they seem. I am currently writing a few
-            short stories about different writing promts, none of the stories have a title. One of the stories
-            is about Satan taking over Earth and he spots a person, Satan is confused because the person
-            is neither god, angel, demon, nor human but something more powerful.
+            My favorite type of books to read are mystery, murder, and horror. One of my favorite games is
+            Five Nights at Freddy's: Ultimate Custom Night. Five Nights at Freddy's: Ultimate Custom Night is
+            a horror survival game about animatronics trying to get you. My favorite movies are Coraline and
+            the FNaF movie. Coraline and the FNaF movie are horror movies about how things aren't always how
+            they seem.
             <br><br>
             My family includes my mom, little brother and our pets. We have a golden retriver named Wrigley,
             a cat named Raine, and a kitten named Wynstyn. Remington is 2 years younger than me, and he is
-            in 9th grade this year. He likes to hang out with his friend, they both play games, watch
-            shows, and play outside. My mom works from home and makes sure that we have what we need when we
-            don't have a lot of money for things that we want. She also tries to make sure that we are able
-            to have fun.
-            <br><br>
-            Wrigley is our Golden Retriever and he will be 7 this year, he doesn't like to be alone and if
-            he is left alone or he thinks that he is alone, he will start whining he also won't eat
-            his food. Wynstyn Chili was found behind the Wendy's in Wauseon, he was a the Humane Shelter
-            with is brothers and sisters, he is super cute and meows a lot and makes a lot of other cat noises.
-            Raine was found in a shed as a kitten when we got her and she bats her paws at Wrigley and
-            Wynstyn.
+            in 9th grade this year. My mom works from home and makes sure that we are able to have fun. 
+            Wynstyn Chili was found behind the Wendy's in Wauseon and he is super cuddly.
+
+            <table>
+                <Caption>College Credit Plus Courses</Caption>
+                <tr>
+                    <th>Course Name</th>
+                    <th>Course Number</th>
+                    <th>Credits</th>
+                </tr>
+                <tr>
+                    <td>Database Management</td>
+                    <td>CIT109</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>C# Programming</td>
+                    <td>CIT161</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>Java Programming</td>
+                    <td>CIT165</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>Python Programming</td>
+                    <td>EET107</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Internet Scripting</td>
+                    <td>CIT108</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>Computer Operations</td>
+                    <td>CIT191</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th>Optional Courses</th>
+                </tr>
+                <tr>
+                    <td>Mircrosoft Apps</td>
+                    <td>CIT114</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>CCP Math Elective</td>
+                    <td></td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Composition 1</td>
+                    <td>ENG111</td>
+                    <td>3</td>
+                </tr>
+            </table>
         </section>
 
         <footer>
